--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
   "devDependencies": {
     "gh-pages": "^4.0.0"
   },
-  "homepage": "http://shelbystrawberry.github.io/personal-website"
+  "homepage": "realshelby.me"
 }
