--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "realshelby.me",
   "name": "personal-website",
   "version": "0.1.0",
   "private": true,
@@ -43,6 +44,5 @@
   },
   "devDependencies": {
     "gh-pages": "^4.0.0"
-  },
-  "homepage": "realshelby.me"
+  }
 }
